[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/font6.tres" type="DynamicFont" id=1]
[ext_resource path="res://script/1.4.2.gd" type="Script" id=2]
[ext_resource path="res://fonts/font1 - 複製 (8) - 複製.tres" type="DynamicFont" id=3]
[ext_resource path="res://Pic/map.png" type="Texture" id=4]
[ext_resource path="res://Pic/LoginDay.png" type="Texture" id=5]
[ext_resource path="res://fonts/日期框.tres" type="StyleBox" id=6]
[ext_resource path="res://Pic/bc911.png" type="Texture" id=7]
[ext_resource path="res://fonts/日期按鈕.tres" type="StyleBox" id=8]
[ext_resource path="res://Fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://script/LoginScroll.gd" type="Script" id=10]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://pic/delete1.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=33]
size = 30
outline_color = Color( 0.654902, 0.654902, 0.670588, 1 )
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="DynamicFont" id=32]
size = 30
outline_size = 3
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=36]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=35]
draw_center = false
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0, 0, 0, 0.764706 )

[sub_resource type="DynamicFont" id=38]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=39]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=40]
size = 33
use_filter = true
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 2 )

[node name="BackgroundPicture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 7 )
expand = true

[node name="cross" type="Button" parent="BackgroundPicture"]
margin_left = 1795.0
margin_top = 24.0
margin_right = 2307.0
margin_bottom = 530.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 16 )
flat = true

[node name="BackgroundBoxPicture" type="TextureRect" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -799.0
margin_top = -580.0
margin_right = -218.0
margin_bottom = 40.0
rect_scale = Vector2( 2.8, 2.3 )
texture = ExtResource( 4 )
expand = true

[node name="大橫線" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 346.497, 62.1948 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( -103.655, 100, 177.202, 100 )
width = 1.0
default_color = Color( 0.654902, 0.654902, 0.670588, 1 )

[node name="左短線" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 346.497, 62.1948 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( 48, 100, -103, 100 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="personal" type="Button" parent="BackgroundPicture/BackgroundBoxPicture"]
margin_left = 46.0
margin_top = 89.3044
margin_right = 270.0
margin_bottom = 133.304
rect_pivot_offset = Vector2( 354.143, 83.5218 )
custom_colors/font_color_disabled = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color_focus = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color_hover = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color_pressed = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_fonts/font = SubResource( 33 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "個人資料"

[node name="record" type="Button" parent="BackgroundPicture/BackgroundBoxPicture"]
margin_left = 272.857
margin_top = 89.3044
margin_right = 517.857
margin_bottom = 133.304
rect_pivot_offset = Vector2( 354.143, 83.5218 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 32 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "簽到記錄"

[node name="month" type="Label" parent="BackgroundPicture/BackgroundBoxPicture"]
margin_left = 259.0
margin_top = 152.478
margin_right = 293.0
margin_bottom = 172.478
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "6 月"
align = 1

[node name="WeekPanel" type="Panel" parent="BackgroundPicture/BackgroundBoxPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.5
margin_top = -132.174
margin_right = 227.5
margin_bottom = -102.174
custom_styles/panel = SubResource( 36 )

[node name="Line2D" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
points = PoolVector2Array( 65, 0, 65, 30 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
points = PoolVector2Array( 130, 0, 130, 30 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D3" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
points = PoolVector2Array( 195, 0, 195, 30 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D4" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
points = PoolVector2Array( 260, 0, 260, 30 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D5" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
points = PoolVector2Array( 325, 0, 325, 30 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D6" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
points = PoolVector2Array( 390, 0, 390, 30 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )

[node name="1" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_top = -4.34781
margin_right = 66.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期一"
align = 1
valign = 1

[node name="2" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_left = 65.0
margin_top = -4.34781
margin_right = 131.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期二"
align = 1
valign = 1

[node name="3" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_left = 130.0
margin_top = -4.34781
margin_right = 196.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期三"
align = 1
valign = 1

[node name="4" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_left = 195.0
margin_top = -4.34781
margin_right = 261.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期四"
align = 1
valign = 1

[node name="5" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_left = 260.0
margin_top = -4.34781
margin_right = 326.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期五"
align = 1
valign = 1

[node name="6" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_left = 325.0
margin_top = -4.34781
margin_right = 391.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期六"
align = 1
valign = 1

[node name="7" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/WeekPanel"]
margin_left = 390.0
margin_top = -4.34781
margin_right = 456.0
margin_bottom = 35.6522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "星期日"
align = 1
valign = 1

[node name="DayPanel" type="Panel" parent="BackgroundPicture/BackgroundBoxPicture"]
margin_left = 66.2857
margin_top = 220.74
margin_right = 521.286
margin_bottom = 420.739
custom_styles/panel = SubResource( 35 )

[node name="1" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 400.0
margin_right = 440.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "1"
align = 1
valign = 1

[node name="2" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 10.0
margin_top = 35.0
margin_right = 50.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "2"
align = 1
valign = 1

[node name="3" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 75.0
margin_top = 35.0
margin_right = 115.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "3"
align = 1
valign = 1

[node name="4" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 140.0
margin_top = 35.0
margin_right = 180.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "4"
align = 1
valign = 1

[node name="5" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 205.0
margin_top = 35.0
margin_right = 245.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "5"
align = 1
valign = 1

[node name="6" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 270.0
margin_top = 35.0
margin_right = 310.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "6"
align = 1
valign = 1

[node name="7" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 335.0
margin_top = 35.0
margin_right = 375.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "7"
align = 1
valign = 1

[node name="8" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 400.0
margin_top = 35.0
margin_right = 440.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "8"
align = 1
valign = 1

[node name="9" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 10.0
margin_top = 70.0
margin_right = 50.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "9"
align = 1
valign = 1

[node name="10" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 75.0
margin_top = 70.0
margin_right = 115.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "10"
align = 1
valign = 1

[node name="11" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 140.0
margin_top = 70.0
margin_right = 180.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "11"
align = 1
valign = 1

[node name="12" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 205.0
margin_top = 70.0
margin_right = 245.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "12"
align = 1
valign = 1

[node name="13" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 270.0
margin_top = 70.0
margin_right = 310.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "13"
align = 1
valign = 1

[node name="14" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 335.0
margin_top = 70.0
margin_right = 375.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "14"
align = 1
valign = 1

[node name="15" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 400.0
margin_top = 70.0
margin_right = 440.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "15"
align = 1
valign = 1

[node name="b16" type="Button" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 9.07144
margin_top = 105.348
margin_right = 52.0714
margin_bottom = 125.348
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "16"

[node name="17" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 75.0
margin_top = 105.0
margin_right = 115.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "17"
align = 1
valign = 1

[node name="18" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 140.0
margin_top = 105.0
margin_right = 180.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "18"
align = 1
valign = 1

[node name="19" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 205.0
margin_top = 105.0
margin_right = 245.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "19"
align = 1
valign = 1

[node name="20" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 270.0
margin_top = 105.0
margin_right = 310.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "20"
align = 1
valign = 1

[node name="21" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 335.0
margin_top = 105.0
margin_right = 375.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "21"
align = 1
valign = 1

[node name="22" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 400.0
margin_top = 105.0
margin_right = 440.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "22"
align = 1
valign = 1

[node name="23" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 10.0
margin_top = 140.0
margin_right = 50.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "23"
align = 1
valign = 1

[node name="24" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 75.0
margin_top = 140.0
margin_right = 115.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "24"
align = 1
valign = 1

[node name="25" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 140.0
margin_top = 140.0
margin_right = 180.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "25"
align = 1
valign = 1

[node name="26" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 205.0
margin_top = 140.0
margin_right = 245.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "26"
align = 1
valign = 1

[node name="27" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 270.0
margin_top = 140.0
margin_right = 310.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "27"
align = 1
valign = 1

[node name="28" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 335.0
margin_top = 140.0
margin_right = 375.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "28"
align = 1
valign = 1

[node name="29" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 400.0
margin_top = 140.0
margin_right = 440.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "29"
align = 1
valign = 1

[node name="30" type="Label" parent="BackgroundPicture/BackgroundBoxPicture/DayPanel"]
margin_left = 10.0
margin_top = 175.0
margin_right = 50.0
margin_bottom = 199.0
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
custom_styles/normal = ExtResource( 6 )
text = "30"
align = 1
valign = 1

[node name="LoginDay" type="WindowDialog" parent="BackgroundPicture"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 37 )

[node name="TextureRect" type="TextureRect" parent="BackgroundPicture/LoginDay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -527.0
margin_top = -355.5
margin_right = 527.0
margin_bottom = 355.5
texture = ExtResource( 5 )
expand = true

[node name="Day" type="Label" parent="BackgroundPicture/LoginDay/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 94.0
margin_right = 49.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 38 )
text = "6/16"

[node name="左短線" type="Line2D" parent="BackgroundPicture/LoginDay/TextureRect"]
position = Vector2( 346.497, 62.1948 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( 80, 230, -300, 230 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="bar" type="Label" parent="BackgroundPicture/LoginDay/TextureRect"]
margin_left = 220.0
margin_top = 162.0
margin_right = 1423.0
margin_bottom = 237.0

[node name="time" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/bar"]
margin_left = 10.0
margin_top = 24.0
margin_right = 130.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 39 )
text = "起訖時間"

[node name="title" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/bar"]
margin_left = 252.0
margin_top = 24.0
margin_right = 458.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 39 )
text = "答對 / 遊玩關卡"

[node name="score" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/bar"]
margin_left = 504.0
margin_top = 23.0
margin_right = 594.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 39 )
text = "答對率"

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPicture/LoginDay/TextureRect"]
margin_left = 224.0
margin_top = 244.0
margin_right = 833.0
margin_bottom = 517.0
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer"]
margin_right = 609.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="line1" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 609.0
margin_bottom = 14.0

[node name="time_start" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 9.0
margin_top = -5.0
margin_right = 85.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "18:30"

[node name="time_to" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 98.0
margin_top = -5.0
margin_right = 129.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "~  "

[node name="time_end" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 130.0
margin_top = -4.0
margin_right = 206.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "19:30"

[node name="correct" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 296.0
margin_top = -5.0
margin_right = 313.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "9"

[node name="slash" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 316.0
margin_top = -5.0
margin_right = 333.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "/"

[node name="play" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 336.0
margin_top = -5.0
margin_right = 370.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "10"

[node name="score" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line1"]
margin_left = 524.0
margin_top = -5.0
margin_right = 587.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "80%"
align = 1
valign = 1

[node name="line2" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 609.0
margin_bottom = 14.0

[node name="time_start" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 9.0
margin_top = -5.0
margin_right = 85.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "18:30"

[node name="time_to" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 98.0
margin_top = -5.0
margin_right = 129.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "~  "

[node name="time_end" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 130.0
margin_top = -4.0
margin_right = 206.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "19:30"

[node name="correct" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 296.0
margin_top = -5.0
margin_right = 313.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "9"

[node name="slash" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 316.0
margin_top = -5.0
margin_right = 333.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "/"

[node name="play" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 336.0
margin_top = -5.0
margin_right = 370.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "10"

[node name="score" type="Label" parent="BackgroundPicture/LoginDay/TextureRect/ScrollContainer/VBoxContainer/line2"]
margin_left = 524.0
margin_top = -5.0
margin_right = 587.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "80%"
align = 1
valign = 1

[node name="cross2" type="Button" parent="BackgroundPicture/LoginDay"]
margin_left = 1795.0
margin_top = 24.0
margin_right = 2307.0
margin_bottom = 530.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 16 )
flat = true

[connection signal="pressed" from="BackgroundPicture/cross" to="." method="_on_cross_pressed"]
[connection signal="pressed" from="BackgroundPicture/BackgroundBoxPicture/personal" to="." method="_on_personal_pressed"]
[connection signal="pressed" from="BackgroundPicture/BackgroundBoxPicture/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="BackgroundPicture/LoginDay/cross2" to="." method="_on_cross2_pressed"]
